[gd_scene load_steps=2 format=3 uid="uid://bupc341ikskbg"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_8atqv"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 440.0
offset_top = 259.0
offset_right = 440.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8atqv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/Resume"]
layout_mode = 0
offset_top = 29.0
offset_right = 70.0
offset_bottom = 60.0
text = "Exit        "

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume/Exit" to="." method="_on_exit_pressed"]
